--- a/Wedding.Web/src/site.scss
+++ b/Wedding.Web/src/site.scss
@@ -35,3 +35,8 @@ a {
     padding-top: 0;
   }
 }
+
+.v-application .v-application--wrap .text-h1,
+.v-application .v-application--wrap .text-h3 {
+    font-family: 'Brush Script MT' !important;
+}
