--- a/Wedding.Web/src/scss/variables.scss
+++ b/Wedding.Web/src/scss/variables.scss
@@ -1,4 +1,1 @@
-﻿@import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
-
-$body-font-family: 'Montserrat';
-$font-size-root: 14px !default;
+﻿
